2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml: Bump add-in versions.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* Project/AspNetAppProject.cs: Use PlatformService to launch a browser 
	  instead of Gnome.Url.Show.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml, AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am:
	  Directory reorganization.

2007-11-20  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Don't try to compile if no files are set to
	  compile, as compilers/bindings (e.g. CSharpBinding) will error out if no
	  files are set to compile. 

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment/WebDeployService.cs, Project/AspNetAppProject.cs,
	  Parser/Document.cs: Track LoggingService API changes.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/VerifyCodeBehindBuildStep.cs: Use RootCombine instead of
	  CurrentOpenCombine when possible.

2007-10-30  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment/WebDeployService.cs, Deployment/WebDeployCommands.cs,
	  Deployment/WebDeployLaunchDialog.cs,
	  gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployLaunchDialog.cs,
	  gtk-gui/gui.stetic: Enable web deploy dialog even if no targets exist,
	  but add a button for editng/adding targets. Fixes "Bug 337804 - Web
	  Deployment should be easier to configure".

2007-10-30  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProjectConfiguration.cs: Fix "Bug 337819 - Directory
	  change warning shown when creating a new Web Project.". Re-opens "Bug
	  333419 - Output dir in ASP.NET project don't work", though it's now
	  possible to work around the latter by setting an XML attribute in the
	  project file.

2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml: Use the html file icon for some known asp.net
	  files.

2007-10-29  Michael Hutchinson <mhutchinson@novell.com>
