@@ -5,9 +5,9 @@
     <target-gtk-version>2.8.3</target-gtk-version>
   </configuration>
   <import>
-    <widget-library name="../../../build/bin/MonoDevelop.Components.dll" />
-    <widget-library name="../../../build/bin/MonoDevelop.Ide.dll" />
-    <widget-library name="../../../build/AddIns/MonoDevelop.Deployment.dll" />
+    <widget-library name="../../../../build/bin/MonoDevelop.Components.dll" />
+    <widget-library name="../../../../build/bin/MonoDevelop.Ide.dll" />
+    <widget-library name="../../../../build/AddIns/MonoDevelop.Deployment/MonoDevelop.Deployment.dll" />
   </import>
   <widget class="Gtk.Bin" id="AspNetAddIn.AspNetConfigurationPanelWidget" design-size="436 300">
     <property name="MemberName" />
@@ -103,7 +103,7 @@
         <child>
           <widget class="Gtk.Label" id="label1">
             <property name="MemberName" />
-            <property name="Xalign">0.01</property>
+            <property name="Xalign">0</property>
             <property name="LabelProp" translatable="yes">&lt;b&gt;General Options&lt;/b&gt;</property>
             <property name="UseMarkup">True</property>
           </widget>
@@ -269,7 +269,7 @@
         <child>
           <widget class="Gtk.Label" id="label2">
             <property name="MemberName" />
-            <property name="Xalign">0.01</property>
+            <property name="Xalign">0</property>
             <property name="LabelProp" translatable="yes">&lt;b&gt;Security&lt;/b&gt;</property>
             <property name="UseMarkup">True</property>
           </widget>
@@ -404,7 +404,7 @@
         <child>
           <widget class="Gtk.Label" id="label3">
             <property name="MemberName" />
-            <property name="Xalign">0.01</property>
+            <property name="Xalign">0</property>
             <property name="LabelProp" translatable="yes">&lt;b&gt;SSL Key&lt;/b&gt;</property>
             <property name="UseMarkup">True</property>
           </widget>
@@ -563,7 +563,7 @@
                 <child>
                   <widget class="Gtk.Label" id="label11">
                     <property name="MemberName" />
-                    <property name="Xalign">0.01</property>
+                    <property name="Xalign">0</property>
                     <property name="LabelProp" translatable="yes">Key type:</property>
                   </widget>
                   <packing>
@@ -779,7 +779,7 @@
         <child>
           <widget class="Gtk.Label" id="label1">
             <property name="MemberName" />
-            <property name="Xalign">0.01</property>
+            <property name="Xalign">0</property>
             <property name="LabelProp" translatable="yes">&lt;b&gt;General Options&lt;/b&gt;</property>
             <property name="UseMarkup">True</property>
           </widget>
@@ -887,7 +887,7 @@
         <child>
           <widget class="Gtk.Label" id="label2">
             <property name="MemberName" />
-            <property name="Xalign">0.01</property>
+            <property name="Xalign">0</property>
             <property name="LabelProp" translatable="yes">&lt;b&gt;File Copying&lt;/b&gt;</property>
             <property name="UseMarkup">True</property>
           </widget>
@@ -951,7 +951,8 @@
     <child internal-child="ActionArea">
       <widget class="Gtk.HButtonBox" id="dialog1_ActionArea">
         <property name="MemberName" />
-        <property name="Spacing">6</property>
+        <property name="Spacing">10</property>
+        <property name="BorderWidth">5</property>
         <property name="Size">2</property>
         <property name="LayoutStyle">End</property>
         <child>
